# mp2-lab4-polinoms

./: CMakeLists.txt  Lab.sln  Lab_pol.sln  Monom.cpp  Monom.h  Otchet.docx  Polinom.cpp  Polinom.h  Polynom.sln  Polynoms.sln  Report lab 4 2.0.docx  Report lab 4.docx  Report2.docx  Report_LW4_MochalovaAnastasia.docx  Report_Lab4.docx  lab4.cpp  polynom.sln  polyrep.docx  rep_vol2.docx  sizov_lab4_polinoms.docx  Лабораторная работа №4. Полиномы.docx  Отчет.docx
ConsoleApp/: ConsoleApp.vcxproj  main.cpp
Debug/: ConsoleApp.ilk  PolynomLibrary.lib
GTest/: test.cpp
GoogleTest/: GoogleTest.vcxproj
Gtest/: Gtest.vcxproj  Gtest.vcxproj.filters  gtest-all.cc  gtest.h
Lab/: Lab4.sln  Report.docx
Lab4/: Lab4.sln
Main/: Main.sln  Main.vcxproj  Main.vcxproj.filters  Source.cpp  TMonom.cpp  TMonom.h  TPolinom.cpp  TPolinom.h
Polinom/: Monom.cpp  Polinom.cpp  Polinom.sln
Polinomials/: Polinomials.sln
Polinoms/: List.h  Polinom.cpp  Polinom.h  Polinoms.sln  Polinoms.vcxproj  Polinoms.vcxproj.filters
Polynom/: Polynom.cpp  Polynom.h  Polynom.sln  Polynom.vcxproj
PolynomLibrary/: PolynomLibrary.vcxproj  ReadMe.txt
Polynoms/: Monom.cpp  Monom.h  Polynoms.cpp  Polynoms.h  Polynoms.vcxproj  Polynoms.vcxproj.filters
Sample/: Main.cpp  Sample.vcxproj  main.cpp
Test/: Test.vcxproj  Test.vcxproj.filters
application/: main.cpp
gtest/: CMakeLists.txt  gtest.vcxproj  gtest.vcxproj.filters
include/: Collection.h  (+11 more)
main/: CMakeLists.txt  main.cpp  main.sln  main.vcxproj
src/: CMakeLists.txt  Polynom.cpp  TMonom.cpp  TPolynom.cpp  polinom.cpp  polynomial.cpp
(+480 files in other folders)
